clusters/vcluster-app/nostr/relay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nostr-relay
  namespace: nostr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nostr-relay
  template:
    metadata:
      annotations:
        litestream.mytools.nakatanakatana.app/inject: nostr-relay-db
        litestream.mytools.nakatanakatana.app/target-container: nostr-relay
        litestream.mytools.nakatanakatana.app/volume: data
      labels:
        app: nostr-relay
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65532
        runAsNonRoot: true
        runAsGroup: 65532
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nostr-relay
          image: ghcr.io/nakatanakatana/nostr-relay:0.12.0@sha256:dc419c3fb9f9fafeb080f066a0cc2952f8f01c67d34c08dca43d9460a3fdd6ec
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: protocol
              containerPort: 8080
            - name: management
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /
              port: protocol
              httpHeaders:
                - name: Accept
                  value: application/nostr+json
          livenessProbe:
            tcpSocket:
              port: protocol
          volumeMounts:
            - name: data
              mountPath: /var/lib/nostr-relay
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nostr-relay-data
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nostr-relay-protocol
  namespace: nostr
spec:
  selector:
    app: nostr-relay
  ports:
    - name: protocol
      port: 8080
      targetPort: protocol
---
apiVersion: v1
kind: Service
metadata:
  name: nostr-relay-management
  namespace: nostr
spec:
  selector:
    app: nostr-relay
  ports:
    - name: management
      port: 8081
      targetPort: management
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nostr-relay
  namespace: nostr
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - nostr-relay
  rules:
    - host: nostr-relay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nostr-relay-protocol
                port:
                  number: 8080
